Fixed namespacing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -206,36 +206,41 @@ table {
 /* line 12, scss/partials/_base.scss */
 body {
   font-family: "Roboto", sans-serif;
-  background: #E1E7EB; }
+  background: #E1E7EB;
+  width: 100%; }
 
-/* line 19, scss/partials/_base.scss */
+/* line 20, scss/partials/_base.scss */
 .navbar {
-  font-size: 60px;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  width: 100%;
+  font-size: 40px;
   background-image: linear-gradient(260deg, #59AF79 0%, #83D455 100%);
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 10px; }
-  /* line 24, scss/partials/_base.scss */
+  /* line 29, scss/partials/_base.scss */
   .navbar h1 {
     color: #fff;
-    font-size: 85px; }
+    font-size: 40px; }
 
-/* line 30, scss/partials/_base.scss */
+/* line 35, scss/partials/_base.scss */
 #main-nav {
   list-style-type: none;
   display: none;
   flex-direction: column; }
 
-/* line 36, scss/partials/_base.scss */
+/* line 41, scss/partials/_base.scss */
 .nav-links, #logo {
   text-decoration: none;
   color: #333640; }
 
-/* line 41, scss/partials/_base.scss */
+/* line 46, scss/partials/_base.scss */
 #main-nav li {
   text-align: center;
   margin: 15px auto; }
 
-/* line 46, scss/partials/_base.scss */
+/* line 51, scss/partials/_base.scss */
 #logo {
   color: #E1E7EB;
   display: inline-block;
@@ -243,17 +248,17 @@ body {
   margin-top: 10px;
   margin-left: 20px; }
 
-/* line 54, scss/partials/_base.scss */
+/* line 59, scss/partials/_base.scss */
 #navbar-toggle {
   position: absolute;
   top: 10px;
   right: 20px;
   cursor: pointer;
   color: #fff;
-  font-size: 60px; }
+  font-size: 40px; }
 
-/* line 65, scss/partials/_base.scss */
-.app {
+/* line 70, scss/partials/_base.scss */
+#app {
   /**
    * Lay out the children of this container with
    * flexbox.
@@ -283,107 +288,122 @@ body {
   padding: 20px;
   background: #fff;
   width: 90%;
-  margin: 30px auto;
+  margin: 80px auto;
   border-radius: 25px;
   transition: max-height 2s ease-out; }
 
-/* line 105, scss/partials/_base.scss */
+/* line 110, scss/partials/_base.scss */
 .input {
   width: 100%; }
-  /* line 107, scss/partials/_base.scss */
+  /* line 112, scss/partials/_base.scss */
   .input ul {
     justify-content: center; }
 
-/* line 114, scss/partials/_base.scss */
+/* line 119, scss/partials/_base.scss */
 .select {
-  margin: 30px auto;
+  margin: 10px auto;
   width: 80%;
-  padding-top: 100px; }
-  /* line 119, scss/partials/_base.scss */
-  .select .nice-select {
+  padding-top: 20px;
+  text-align: center; }
+  /* line 125, scss/partials/_base.scss */
+  .select .option {
+    font-size: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  /* line 131, scss/partials/_base.scss */
+  .select select {
+    text-align-last: center;
+    width: 80%;
+    border: 2px solid black;
+    padding: 15px;
+    font-size: 20px;
+    outline: none; }
+  /* line 142, scss/partials/_base.scss */
+  .select .list {
     width: 100%;
-    line-height: 60px;
-    height: auto;
-    padding: 30px;
-    background: #E1E7EB;
-    border-radius: 15px 15px 0px 0px;
     border-color: #999;
-    border-width: 0px 2px 2px 2px;
-    margin-bottom: 30px;
+    background: inherit;
+    border-radius: 0px;
+    overflow: scroll; }
+  /* line 150, scss/partials/_base.scss */
+  .select .current {
     text-align: center; }
-    /* line 130, scss/partials/_base.scss */
-    .select .nice-select .current {
-      text-align: center;
-      font-size: 85px; }
-    /* line 136, scss/partials/_base.scss */
-    .select .nice-select .option {
-      font-size: 50px;
-      padding-top: 20px;
-      padding-bottom: 20px; }
-    /* line 144, scss/partials/_base.scss */
-    .select .nice-select .list {
-      width: 100%;
-      border-color: #999;
-      background: inherit;
-      border-radius: 0px;
-      overflow: scroll; }
-    /* line 152, scss/partials/_base.scss */
-    .select .nice-select .current {
-      text-align: center; }
-  /* line 157, scss/partials/_base.scss */
+  /* line 154, scss/partials/_base.scss */
   .select h2 {
-    font-size: 80px;
-    padding-bottom: 40px; }
+    font-size: 40px;
+    padding-bottom: 20px; }
 
-/* line 166, scss/partials/_base.scss */
+/* line 163, scss/partials/_base.scss */
 .btn {
-  margin: 60px auto;
-  padding-top: 90px; }
-  /* line 170, scss/partials/_base.scss */
+  margin: 0 auto;
+  padding-top: 10px;
+  text-align: center; }
+  /* line 168, scss/partials/_base.scss */
   .btn button {
-    display: flex;
-    justify-content: center;
     background: #fff;
     box-shadow: none;
-    font-size: 85px;
-    min-width: 200px;
-    padding: 30px 45px 36px;
-    border-radius: 3px;
+    font-size: 20px;
+    padding: 10px 10px;
+    border-radius: 1px;
     box-shadow: inset 0 -1px 0 1px rgba(0, 0, 0, 0.1), inset 0 -10px 20px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     outline: none;
     transition: background 1s, color .5s; }
-    /* line 183, scss/partials/_base.scss */
+    /* line 178, scss/partials/_base.scss */
     .btn button:hover {
       background: #83D455;
       color: #fff; }
 
-/* line 192, scss/partials/_base.scss */
+/* line 187, scss/partials/_base.scss */
 #result {
   display: none;
-  background: #E1E7EB;
-  width: 90%;
-  border: 2px solid #999;
+  width: 100%;
   border-radius: 25px;
   color: #333640;
   font-weight: 200;
-  font-size: 80px;
+  font-size: 40px;
   margin-bottom: 30px;
   text-align: center;
-  padding: 20px; }
+  padding: 10px; }
 
-@media only screen and (min-width: 1030px) {
-  /* line 1, scss/partials/_1030up.scss */
-  main {
-    margin: 0 auto; }
-  /* line 5, scss/partials/_1030up.scss */
-  .intro {
-    float: none;
-    width: 60%;
-    margin: 0 auto;
-    padding-bottom: 20px h1;
-      padding-bottom-padding: 20px 0; }
-  /* line 18, scss/partials/_1030up.scss */
-  .dir-container ul li:hover {
-    background: #999;
-    transition: background 1s; } }
+/* line 199, scss/partials/_base.scss */
+#back-btn {
+  margin-top: 30px; }
+
+/* line 203, scss/partials/_base.scss */
+.show {
+  display: block !important; }
+
+@media only screen and (min-width: 768px) {
+  /* line 4, scss/partials/_768up.scss */
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 0;
+    height: 70px;
+    align-items: center;
+    font-size: 20px; }
+    /* line 11, scss/partials/_768up.scss */
+    .navbar h1 {
+      font-size: 50px; }
+  /* line 16, scss/partials/_768up.scss */
+  #main-nav {
+    display: flex !important;
+    margin-right: 30px;
+    flex-direction: row;
+    justify-content: flex-end; }
+  /* line 23, scss/partials/_768up.scss */
+  #main-nav li {
+    margin: 0; }
+  /* line 27, scss/partials/_768up.scss */
+  .nav-links {
+    margin-left: 40px; }
+  /* line 31, scss/partials/_768up.scss */
+  #logo {
+    margin-top: 0; }
+  /* line 35, scss/partials/_768up.scss */
+  #navbar-toggle {
+    display: none; }
+  /* line 39, scss/partials/_768up.scss */
+  #logo:hover, .nav-links:hover {
+    color: #E1E7EB; } }
