--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -12,18 +12,23 @@ $highlight-color: #E1E7EB;
 body {
   font-family: $base-font;
   background: $base-background;
+  width: 100%;
 }
 
 //Base navbar styles
 
 .navbar {
-  font-size: 60px;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  width: 100%;
+  font-size: 40px;
   background-image: linear-gradient(260deg, #59AF79 0%, #83D455 100%); 
   border: 1px solid rgba(0,0,0,0.2);
   padding-bottom: 10px;
   h1{
     color: #fff;
-    font-size: 85px;
+    font-size: 40px;
   }
 }
 
@@ -57,12 +62,12 @@ body {
   right: 20px;
   cursor: pointer; 
   color: #fff;
-  font-size: 60px;
+  font-size: 40px;
 }
 
 //Main section
 
-.app{
+#app{
  /**
    * Lay out the children of this container with
    * flexbox.
@@ -96,7 +101,7 @@ body {
   padding: 20px;
   background: #fff;
   width: 90%;
-  margin: 30px auto;
+  margin: 80px auto;
   border-radius: 25px;
   transition: max-height 2s ease-out;
 }
@@ -112,33 +117,26 @@ body {
 
 
 .select{
-  margin: 30px auto;
+  margin: 10px auto;
   width: 80%;
-  padding-top: 100px;
-
-  .nice-select{
-    width: 100%;
-    line-height: 60px;
-    height: auto;
-    padding: 30px;
-    background: $base-background;
-    border-radius: 15px 15px 0px 0px;
-    border-color: #999;
-    border-width: 0px 2px 2px 2px;
-    margin-bottom: 30px;
-    text-align: center;
-    .current{
-    text-align: center;
-    font-size: 85px;  
-
-    }
+  padding-top: 20px;
+  text-align: center;
 
     .option{
       font-size: 50px;
-      padding-top: 20px;
-      padding-bottom: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
 
+  select{
+    text-align-last: center;
+    width: 80%;
+    border: 2px solid black;
+    padding: 15px;
+    font-size: 20px;
+    outline: none;
+
+  }
   
 
   .list{
@@ -153,10 +151,9 @@ body {
     text-align: center;
   }
 
-  }
   h2{
-    font-size: 80px;
-    padding-bottom: 40px;
+    font-size: 40px;
+    padding-bottom: 20px;
 
   }
 
@@ -164,18 +161,16 @@ body {
 
 
 .btn{
-  margin: 60px auto;
-  padding-top: 90px;
+  margin: 0 auto;
+  padding-top: 10px;
+  text-align: center;
 
   button{
-    display: flex;
-    justify-content: center;
     background: #fff;
     box-shadow: none;
-    font-size: 85px;
-    min-width: 200px;
-    padding: 30px 45px 36px;
-    border-radius: 3px;
+    font-size: 20px;
+    padding: 10px 10px;
+    border-radius: 1px;
     box-shadow: inset 0 -1px 0 1px rgba(0,0,0,.1), inset 0 -10px 20px rgba(0,0,0,.1);
     cursor: pointer;
     outline: none;
@@ -191,17 +186,22 @@ body {
 
 #result{
   display: none;
-  background: $base-background;
-  width: 90%;
-  border: 2px solid #999;
+  width: 100%;
   border-radius: 25px;
   color: $base-font-color;
   font-weight: 200;
-  font-size: 80px;
+  font-size: 40px;
   margin-bottom: 30px;
   text-align: center;
-  padding: 20px;
+  padding: 10px;
 }
 
+#back-btn{
+  margin-top: 30px;
+}
+
+.show{
+  display: block !important;
+}
 
 
